k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend
  namespace: myapp-namespace
  labels:
    app: express-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-backend
  template:
    metadata:
      labels:
        app: express-backend
    spec:
      containers:
      - name: express-backend
        image: deepsaha288/express-api-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
  namespace: myapp-namespace
spec:
  selector:
    app: express-backend
  ports:
  - port: 3000
    targetPort: 3000
