k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: myapp-namespace
  labels:
    app: react-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: 586771776875.dkr.ecr.us-east-1.amazonaws.com/react-app-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: myapp-namespace
spec:
  selector:
    app: react-frontend
  ports:
  - port: 80
    targetPort: 80
